--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-pandas==1.4.2
-matplotlib==3.5.2
-numpy==1.22.4
+pandas
+matplotlib
+numpy
 seaborn
-streamlit==1.9.0
-scikit_learn==0.24.1
+streamlit
+scikit_learn
